--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,11 +1,11 @@
-.modules-container {
-  display: grid;
-  justify-content: center;
-  grid-template-columns: repeat(auto-fit, minmax(30rem, 40rem));
-  gap: 20px;
+.modules-container > * {
+  margin-top: 1rem;
+}
+
+.app {
+  padding: 0 1rem;
 }
 
 h1 {
   margin-block: 2rem;
-  padding: 1rem;
 }
