--- a/frontend/src/styles/HydrophonicModuleDetails.css
+++ b/frontend/src/styles/HydrophonicModuleDetails.css
@@ -1,9 +1,24 @@
+.module__heading {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
 .btn {
-  margin-top: 2rem;
   background-color: var(--dark-color);
   color: white;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 1.5rem;
   border-radius: 0.5rem;
   text-decoration: none;
+  height: fit-content;
   cursor: pointer;
+}
+
+.btn--disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+.content {
+  margin-block: 2rem;
 }
