--- a/frontend/src/components/HydroponicModule/HydroponicModule.module.css
+++ b/frontend/src/components/HydroponicModule/HydroponicModule.module.css
@@ -12,8 +12,24 @@
 
 .module__header {
   display: flex;
-  gap: 2rem;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.4rem;
+}
+
+.module__temperatures-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  text-align: right;
+}
+
+.module__temperature-value--positive {
+  color: var(--secondary-color);
+}
+
+.module__temperature-value--negative {
+  color: var(--accent-secondary-color);
 }
 
 .module__title {
@@ -33,22 +49,4 @@
 .module__temperature-label {
   font-size: 1.2rem;
   opacity: 0.5;
-}
-
-.module__temperature-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  min-width: 13rem;
-}
-
-.module__temperature {
-  display: flex;
-  flex-direction: column;
-  gap: 0.4rem;
-  font-size: 1.6rem;
-}
-
-.module__temperature-container .module__temperature:last-child {
-  text-align: right;
 }
