Create reusable util function for calculating color

--- a/frontend/src/components/HydrophonicModuleDetails/HydrophonicModuleDetails.module.css
+++ b/frontend/src/components/HydrophonicModuleDetails/HydrophonicModuleDetails.module.css
@@ -22,3 +22,11 @@
 .content {
   margin-block: 2rem;
 }
+
+.module__temperature-value--positive {
+  color: var(--secondary-color);
+}
+
+.module__temperature-value--negative {
+  color: var(--accent-secondary-color);
+}
