--- a/frontend/src/components/HistoricalData/HistoricalData.module.css
+++ b/frontend/src/components/HistoricalData/HistoricalData.module.css
@@ -1,3 +1,10 @@
 .historical-data {
   margin-block: 2rem;
 }
+
+.historical-data__charts {
+  padding: 2rem;
+  display: flex;
+  align-items: flex-start;
+  gap: 2rem;
+}
