--- a/frontend/src/components/HistoricalData/HistoricalData.module.css
+++ b/frontend/src/components/HistoricalData/HistoricalData.module.css
@@ -1,10 +1,38 @@
 .historical-data {
-  margin-block: 2rem;
+  flex-basis: 0;
+  flex-grow: 999;
+  padding: 2rem;
 }
 
 .historical-data__charts {
-  padding: 2rem;
+  padding: 2rem 0;
   display: flex;
   align-items: flex-start;
+  flex-wrap: wrap;
   gap: 2rem;
+}
+
+.historical-data__submit {
+  width: fit-content;
+}
+
+.historical-data__form {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.historical-data__form > div {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+.historical-data__form input {
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: var(--dark-color);
+  color: var(--light-color);
 }
