--- a/frontend/src/styles/HydrophonicModuleDetails.module.css
+++ b/frontend/src/styles/HydrophonicModuleDetails.module.css
@@ -1,32 +1,5 @@
-.module__heading {
+.module-details {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
   gap: 1rem;
-}
-
-.btn {
-  background-color: var(--dark-color);
-  color: white;
-  padding: 0.5rem 1.5rem;
-  border-radius: 0.5rem;
-  text-decoration: none;
-  height: fit-content;
-  cursor: pointer;
-}
-
-.btn--disabled {
-  opacity: 0.5;
-  cursor: not-allowed;
-}
-
-.content {
-  margin-block: 2rem;
-}
-
-.module__temperature-value--positive {
-  color: var(--secondary-color);
-}
-
-.module__temperature-value--negative {
-  color: var(--accent-secondary-color);
 }
