--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -23,3 +23,14 @@ body {
   margin: 0 auto;
   font-size: 1.6rem;
 }
+
+button {
+  cursor: pointer;
+  padding: 0.8rem;
+  border-radius: 0.5rem;
+  border: none;
+  font-size: 1.6rem;
+  color: white;
+  font-weight: bold;
+  background-color: var(--dark-color);
+}
