--- a/frontend/src/components/CurrentModuleData/CurrentModuleData.module.css
+++ b/frontend/src/components/CurrentModuleData/CurrentModuleData.module.css
@@ -31,6 +31,10 @@
   font-size: 0.8rem;
 }
 
+.module__temperature-label {
+  opacity: 0.5;
+}
+
 .module__temperature-value--positive {
   color: var(--secondary-color);
 }
