--- a/frontend/src/components/HistoricalDataTable/HistoricalDataTable.module.css
+++ b/frontend/src/components/HistoricalDataTable/HistoricalDataTable.module.css
@@ -8,6 +8,7 @@
 
 .table {
   box-shadow: 0 0 10px var(--dark-color);
+  margin-top: 2rem;
   padding: 1rem;
   width: 100%;
   border-radius: 0.5rem;
