--- a/frontend/src/components/EditModal/EditModal.module.css
+++ b/frontend/src/components/EditModal/EditModal.module.css
@@ -5,6 +5,7 @@
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(0.5rem);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,7 +15,7 @@
   background-color: var(--dark-color);
   color: white;
   padding: 2rem;
-  border-radius: 0.5rem;
+  border-radius: 1.6rem;
   width: clamp(30rem, 50%, 50rem);
 }
 
